compile_fail_tests/struct_refuse_ellipsis.stderr
error: no rules expected `..`
 --> compile_fail_tests/struct_refuse_ellipsis.rs:9:39
  |
9 |         const_destructure!(let Wrap { .. } = self);
  |                                       ^^ no rules expected this token in macro call
  |
note: while trying to match `)`
 --> src/lib.rs
  |
  |     (@struct ()
  |               ^
